[gd_scene load_steps=7 format=3 uid="uid://bika4472fwiup"]

[ext_resource type="Script" uid="uid://ysdyd1te136g" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://bv60p06xpm8u" path="res://Assets/Sprites/Player/Idle.png" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://blrqyccncs87y" path="res://StateMachine/state_machine.tscn" id="3_i3pqv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sweqy"]
radius = 6.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i3pqv"]
radius = 6.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hqtel"]
radius = 6.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -0.5)
texture = ExtResource("2_i3pqv")

[node name="RegCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_sweqy")

[node name="SlideCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_i3pqv")
disabled = true

[node name="CrouchCollider" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(-1, 8)
shape = SubResource("CapsuleShape2D_hqtel")
disabled = true

[node name="Label" type="Label" parent="."]
z_index = 5
offset_left = -12.0
offset_top = -39.0
offset_right = 12.0
offset_bottom = -16.0

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="HangCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="RayChecks" type="Node2D" parent="."]

[node name="ClimbCheckRight" type="RayCast2D" parent="RayChecks"]
visible = false
position = Vector2(0, -9)
enabled = false
target_position = Vector2(14, 0)

[node name="ClimbCheckLeft" type="RayCast2D" parent="RayChecks"]
visible = false
position = Vector2(0, -9)
target_position = Vector2(-14, 0)

[node name="RightWallCheck" type="RayCast2D" parent="RayChecks"]
visible = false
position = Vector2(0, -2)
target_position = Vector2(12, 0)

[node name="LeftWallCheck" type="RayCast2D" parent="RayChecks"]
visible = false
position = Vector2(0, -2)
target_position = Vector2(-12, 0)

[node name="CeilingCheck" type="RayCast2D" parent="RayChecks"]
visible = false
position = Vector2(0, 4)
target_position = Vector2(0, -15)

[node name="StateMachine" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_i3pqv")]
player = NodePath("..")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="HangCooldown" to="." method="_on_hang_cooldown_timeout"]
